--- a/writing/Cubert/Cubert manuscript.tex
+++ b/writing/Cubert/Cubert manuscript.tex
@@ -543,34 +543,34 @@ As Fig.~\ref{resultsexpt2} demonstrates, \textsc{context} interacted with \texts
 
 As we would expect if contextual predictability of collective properties determines the viability of collective interpretations, regular contexts had higher ratings for collective paraphrases and lower ratings for distributive. The predicate \textit{tall} was most affected by our contextual manipulation, which directly targeted the height dimension, stacking boxes on top of each other. But \emph{big}, claimed to be stubbornly distributive, is similarly affected: regular contexts yield more collective interpretations. 
 
-The predicate \emph{heavy} was least affected by this contextual manipulation, presumably because it was unsuccessful at increasing to predictability of collective weight. Collective weight is a maximally stable (and thus predictable) property: there is only one way to evaluate it, and the property persists despite changing physical arrangement. We have little hope of increasing the contextual predictability of a property that is already maximally stable, which accounts for the relative insensitivity of \emph{heavy} to our contextual manipulation. We can, however, privilege collective interpretations by limiting speakers' access to the information they would need to verify a distributive interpretation. We did just that in our scenario manipulation, where \textsc{move} scenarios yielded higher rates of collective interpretations for \emph{heavy} because speakers lacked information about individual box weights. The predicates \emph{big} and \emph{tall} were not affected by the speaker knowledge scenario manipulation because they name properties that are visually assessable, and thus visually accessible.
+The predicate \emph{heavy} was least affected by this contextual manipulation, presumably because the manipulation was unsuccessful at increasing the predictability of collective weight. Recall that collective weight is a maximally stable (and thus predictable) property: there is only one way to evaluate it, and the property persists despite changing physical arrangement. We have little hope of increasing the contextual predictability of a property that is already maximally stable, which accounts for the relative insensitivity of \emph{heavy} to our contextual manipulation. We can, however, privilege collective interpretations by limiting speakers' access to the information they would need to verify a distributive interpretation. We did just that in our scenario manipulation, where \textsc{move} scenarios yielded higher rates of collective interpretations for \emph{heavy} because speakers lacked information about individual box weights. The predicates \emph{big} and \emph{tall} were not affected by the speaker knowledge scenario manipulation because they name properties that are visually assessable, and thus visually accessible.
 
-Our results demonstrate the central role of context in plural predication: as collective properties become more predictable, collective interpretations become more likely; and without epistemic support, distributive interpretations become less likely. These findings support a pragmatic account of stubborn distributivity according to which ostensibly stubbornly distributive predicates are so because the properties they name are unpredictable, or unstable in context. Next, we formalize this choice of interpretation in a Bayesian Rational Speech Act model \citep{frankgoodman2012,lassitergoodman2013}. Noisy (i.e., more variable) interpretations are less useful because they require more coordination between speakers and listeners; they are therefore less likely. Similarly, interpretations for which speakers lack knowledge are unlikely.
+Our results demonstrate the central role of context in plural predication: as collective properties become more predictable, collective interpretations become more likely; and without epistemic support, distributive interpretations become less likely. These findings support a pragmatic account of stubborn distributivity according to which ostensibly stubbornly distributive predicates are such because the properties they name are unpredictable, or unstable in context. Next, we formalize this choice of interpretation in a Bayesian Rational Speech-Act model \citep{frankgoodman2012,lassitergoodman2013}. Noisy (i.e., more variable) interpretations are less useful because they require more coordination between speakers and listeners; they are therefore less likely. Similarly, listeners are less likely to assume interpretations for which speakers lack knowledge.
 
 
 
 \section{Modeling plural predication}
 
-We have seen that disambiguating plural predication depends not only on local linguistic context (e.g., the predicate, its subject, and disambiguating particles like \emph{each} or \emph{together}), but also on the broader discourse context. Moreover, we showed how properties of the broader context stand to explain the effect certain predicates have on disambiguating plural predication: Complaisantly collective predicates like \emph{heavy} name collective properties that are stable and predictable on the basis of context; stubbornly distributive predicates like \emph{big} name collective properties that are unstable and unpredictable on the basis of context. The less predictable the collective property, the noisier the collective interpretation. A noisy interpretation is less useful at communicating its intended message, and therefore less likely. To formalize the effect of contextual predictability and interpretation noise in plural predication, we adopt a lifted variable variant of the Bayesian Rational Speech Act model.
+We have seen that disambiguating plural predication depends not only on local linguistic context (e.g., the predicate, its subject, and disambiguating particles like \emph{each} or \emph{together}), but also on the broader discourse context. Moreover, we showed how properties of the broader context stand to explain the effect certain predicates have on disambiguating plural predication: Complaisantly collective predicates like \emph{heavy} name collective properties that are stable and predictable on the basis of context; stubbornly distributive predicates like \emph{big} name collective properties that are unstable and unpredictable on the basis of context. The less predictable the collective property, the noisier the collective interpretation. A noisy interpretation is less useful at communicating its intended message, and therefore less likely. Additionally, we saw that listeners track speaker knowledge as they disambiguate plural predication, so that unsupported interpretations are unlikely. To formalize the effect of contextual predictability and speaker knowledge in plural predication, we adopt a lifted variable variant of the Bayesian Rational Speech-Act model. 
 
-The Rational Speech Act (RSA) framework views communication as recursive reasoning between a speaker and a listener. The listener interprets the speaker's utterance by reasoning about a cooperative speaker trying to inform a naive listener about some state of affairs. Using Bayesian inference, the listener infers what the state of the world is likely to be given that a speaker produced some utterance, knowing that the speaker is reasoning about how a listener is most likely to interpret that utterance. Thus, we have at least three levels of inference. At the top, the pragmatic listener, \emph{L}$_{1}$, reasons about the speaker, \emph{S}$_{1}$, and infers the state of the world \emph{s} given that the speaker chose to produce the utterance \emph{u}. The speaker chooses \emph{u} by maximizing the likelihood that a naive listener, \emph{L}$_{0}$, would correctly infer the state of the world \emph{s} given the literal meaning of \emph{u}.
+The Rational Speech-Act (RSA) framework views communication as recursive reasoning between a speaker and a listener. The listener interprets the speaker's utterance by reasoning about a cooperative speaker trying to inform a naive listener about some state of affairs. Using Bayesian inference, the listener infers what the state of the world is likely to be given that a speaker produced some utterance, knowing that the speaker is reasoning about how a listener is most likely to interpret that utterance. Thus, we have at least three levels of inference. At the top, the sophisticated, pragmatic listener, \emph{L}$_{1}$, reasons about the pragmatic speaker, \emph{S}$_{1}$, and infers the state of the world \emph{s} given that the speaker chose to produce the utterance \emph{u}. The speaker chooses \emph{u} by maximizing the likelihood that a naive, literal listener, \emph{L}$_{0}$, would correctly infer the state of the world \emph{s} given the literal meaning of \emph{u}.
 
 In more detail, the pragmatic listener \emph{L}$_{1}$ computes the probability of a state \emph{s} given some utterance \emph{u}. By reasoning about the speaker \emph{S}$_{1}$, this probability is proportional to the probability that \emph{S}$_{1}$ would choose to utter \emph{u} to communicate about the state \emph{s}, together with the prior probability of \emph{s} itself.
 
 \ex. \emph{The pragmatic listener}:\\
 $P_{L_{1}}(s|u) \propto P_{S_{1}}(u|s) \cdot P(s)$
 
-The speaker \emph{S}$_{1}$ wants to choose an utterance \emph{u} that would most effectively communicate some state \emph{s} to a hypothesized literal listener \emph{L}$_{0}$.  In other words, \emph{S}$_{1}$ wants to minimize the effort \emph{L}$_{0}$ would need to arrive at \emph{s} from \emph{u}, all while being efficient at communicating. This trade-off between efficacy and efficiency is not trivial: Speakers could always use minimal ambiguity, but unambiguous utterances tend toward the unwieldy, and, very often, unnecessary. \emph{S}$_{1}$ thus seeks to minimize the surprisal of \emph{s} given \emph{u} for the literal listener \emph{L}$_{0}$, while bearing in mind the utterance cost, \emph{C}(\emph{u}). In \Next, we formalize the speaker's utility function \emph{U}$_{S_{1}}$: Utterances are more useful at communicating about some state as surprisal and utterance cost decrease.
+The speaker \emph{S}$_{1}$ desires to choose an utterance \emph{u} that would most effectively communicate some state \emph{s} to a hypothesized literal listener \emph{L}$_{0}$.  In other words, \emph{S}$_{1}$ wants to minimize the effort \emph{L}$_{0}$ would need to arrive at \emph{s} from \emph{u}, all while being efficient at communicating. This trade-off between efficacy and efficiency is not trivial: Speakers could always use minimal ambiguity, but unambiguous utterances tend toward the unwieldy, and, very often, unnecessary. \emph{S}$_{1}$ thus seeks to minimize the surprisal of \emph{s} given \emph{u} for the literal listener \emph{L}$_{0}$, while bearing in mind the utterance cost, \emph{C}(\emph{u}). In \Next, we formalize the speaker's utility function \emph{U}$_{S_{1}}$: Utterances are more useful at communicating about some state as surprisal and utterance cost decrease.
 
 \ex. \emph{The speaker's utility function}:\\
 $U_{S_{1}}(u|s) = \textrm{log}L_{0}(s|u) - C(u)$
 
-With this utility function in mind, $S_{1}$ computes the probability of an utterance $u$ given some state $s$ in proportion to the speaker's utility function. The term $\alpha > 0$ controls the speaker's optimality, that is, the speaker's rationality in choosing utterances.
+With this utility function in mind, $S_{1}$ computes the probability of an utterance $u$ given some state $s$ in proportion to the speaker's utility function. The term \mbox{$\alpha > 0$} controls the speaker's optimality, that is, the speaker's rationality in choosing utterances. ($\alpha$ corresponds to the temperature parameter of S1's softmax optimization.)
 
 \ex. \emph{The pragmatic speaker}:\\
 $P_{S_{1}}(u|s) \propto \textrm{exp}(\alpha\textrm{ln}P_{L_{0}}(s|u))$
 
-At the base of this reasoning, the naive, or literal listener $L_{0}$ interprets an utterance according to its meaning. That is, $L_{0}$ computes the probability of $s$ given $u$ according to the semantics of $u$ and the prior probability of $s$. A standard view of the semantic content of an utterance suffices: a mapping from states of the world to truth values.
+At the base of this reasoning, the naive, literal listener $L_{0}$ interprets an utterance according to its meaning. That is, $L_{0}$ computes the probability of $s$ given $u$ according to the semantics of $u$ and the prior probability of $s$. A standard view of the semantic content of an utterance suffices: a mapping from states of the world to truth values.
 
 \ex. \emph{The literal listener}:\\
 $P_{L_{0}}(s|u) \propto \sem{u}(s) \cdot P(s)$
@@ -593,8 +593,10 @@ Within the RSA framework, communication is thus modeled as in Fig.~\ref{RSA}, wh
 	\caption{Graphical representation of the Bayesian RSA model.}\label{RSA}
 \end{figure}
 
-In its initial formulation, \citet{frankgoodman2012} use the basic RSA framework to model referent choice in efficient communication. Imagine referential communication game with three objects, as in Fig.~\ref{refgame}. Suppose a speaker wants to signal an object, but only has a single word with which to do so.
-Applying the RSA model schematized in Fig.~\ref{RSA} to the communication scenario in Fig.~\ref{refgame}, the speaker $S_{1}$ chooses a word $u$ to best signal an object $s$ to a literal listener $L_{0}$, who interprets $u$ in proportion to the probability of naming objects in the scenario (i.e., to the objects' salience). The pragmatic listener $L_{1}$ reasons about the speaker's reasoning, and interprets $u$ accordingly. By formalizing the contributions of salience and  efficiency, the RSA framework provides an information-theoretic definition of informativeness in pragmatic inference. This definition will prove crucial in understanding the contribution of contextual predictability of collective properties in the interpretation of plural predication.
+In its initial formulation, \citet{frankgoodman2012} use the basic RSA framework to model referent choice in efficient communication. To see the mechanism at work, imagine a referential communication game with three objects, as in Fig.~\ref{refgame}. Suppose a speaker wants to signal an object, but only has a single word with which to do so.
+Applying the RSA model schematized in Fig.~\ref{RSA} to the communication scenario in Fig.~\ref{refgame}, the speaker $S_{1}$ chooses a word $u$ to best signal an object $s$ to a literal listener $L_{0}$, who interprets $u$ in proportion to the probability of naming objects in the scenario (i.e., to the objects' salience). The pragmatic listener $L_{1}$ reasons about the speaker's reasoning, and interprets $u$ accordingly.  By formalizing the contributions of salience and  efficiency, the RSA framework provides an information-theoretic definition of informativeness in pragmatic inference. This definition will prove crucial in understanding the contribution of contextual predictability of collective properties in the interpretation of plural predication.
+
+Continuing with the language game in Fig.~\ref{refgame}, suppose you are the speaker and you want to signal the object in the center to a listener. Your options for $u$ are the words ``blue'' and ``circle''.
 
 \begin{figure}[h]
 	\begin{center}
@@ -604,14 +606,14 @@ Applying the RSA model schematized in Fig.~\ref{RSA} to the communication scenar
 	\end{center}
 \end{figure}
 
-To successfully model ambiguity resolution in plural predication, we need to adopt a variant of the RSA approach wherein speakers and listeners reason not merely over utterances and meanings, but also over variables that contribute to those meanings. This sort of ``lifted variable'' (also called ``lexical uncertainty'') RSA model has proven useful in accounts of adjective semantics (where the lifted variable is the adjective's degree threshold; \citealp{lassitergoodman2013}), specificity implicatures (where the lifted variable determines the choice of lexica; \citealp{bergenetal2012}), and non-literal meaning (where the lifted variable concerns the dimension along which the speaker intends to communicate; \citealp{kaoetal2014}), to name just a few applications (see also XXX). Here, the lifted variably about which speakers and listeners reason determines the interpretation of an ambiguous plural predication: whether an utterance is interpreted collectively or distributively.
+To successfully model ambiguity resolution in plural predication, we need to adopt a variant of the RSA approach wherein speakers and listeners reason not merely over utterances and meanings, but also over variables that contribute to those meanings. This sort of ``lifted variable'' (also called ``lexical uncertainty'') RSA model has proven useful in accounts of adjective semantics (where the lifted variable is the adjective's degree threshold; \citealp{lassitergoodman2013}), specificity implicatures (where the lifted variable determines the choice of lexica; \citealp{bergenetal2012}), and non-literal meaning (where the lifted variable concerns the dimension along which the speaker intends to communicate; \citealp{kaoetal2014}), to name just a few applications (see also XXX). Here, the lifted variable about which speakers and listeners reason determines the interpretation of an ambiguous plural predication: whether an utterance is interpreted collectively or distributively.
 
-The ambiguity-resolving free variable $V$ determines the interpretation of an plural predication utterance $u$. When $V$ is \textsc{coll}, $u$ receives a collective interpretation; when $V$ is \textsc{dist}, $u$ receives a distributive interpretation. Now, the lifted variable literal listener $L_{0}$ computes the probability of some state $s$ given an utterance $u$ and some value for $V$. 
+The ambiguity-resolving free variable $V$ determines the interpretation of an plural predication utterance $u$. When $V$ is \textsc{collective}, $u$ receives a collective interpretation; when $V$ is \textsc{distributive}, $u$ receives a distributive interpretation. Now, the lifted variable literal listener $L_{0}$ computes the probability of some state $s$ given an utterance $u$ and some value for $V$. 
 
 \ex. \emph{The lifted variable literal listener}:\\
 $P_{L_{0}}(s|u,V) \propto \sem{u}^{V}(s) \cdot P(s) \cdot P(V)$
 
-But $L_{0}$ does not know the value of $V$. Put differently, the literal listener does not know the intended reading of an ambiguous utterance. The name "lifted variable RSA" captures the fact that this free variable gets passed up from the literal listener through the speaker to be estimated by the pragmatic listener.
+But $L_{0}$ does not know the value of $V$. Put differently, the literal listener does not know the intended interpretation of an ambiguous utterance. The name "lifted variable RSA" captures the fact that this free variable gets passed up from the literal listener through the speaker to be estimated by the pragmatic listener; the pragmatic listener fixes the interpretation by which the literal listener interprets the utterance.
 
 The lifted variable pragmatic speaker $S_{1}$ now incorporates $V$ so that utterances are chosen to best communicate some state $s$ given an interpretation $V$. $S_{1}$ maximizes the likelihood of $u$ given $s$ and $V$, relative to the speaker utility function which minimizes surprisal and the cost of $u$.
 
@@ -623,7 +625,46 @@ At the top level, the lifted variable pragmatic listener $L_{1}$ interprets an u
 \ex. \emph{The lifted variable pragmatic listener}:\\
 $P_{L_{1}}(s|u,V) \propto P_{S_{1}}(u|s,V) \cdot P(s) \cdot P(V)$
 
-To summarize, the lifted variable RSA model of plural predication has the pragmatic listener resolve ambiguity while interpreting an utterance by reasoning about the pragmatic speaker, who chooses utterances most likely to communicate some state via a specific interpretation to a naive, literal listener.
+To summarize, the lifted variable RSA model of plural predication has the pragmatic listener resolve ambiguity while interpreting an utterance by reasoning about the pragmatic speaker, who chooses utterances most likely to communicate some state via a specific interpretation to a naive, literal listener.  In other words, listeners reason about likely interpretations of ambiguous plural predications given their intuitive understanding of speakers and their prior knowledge of the world (i.e., which states and interpretations are \emph{a priori} likely).
+
+To generate qualitative and quantitative predictions that we may compare with our experimental data, we need to fix various parameter settings within the model. Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.}
+
+ States $s$ correspond to sets of objects, which hold scalar properties. More specifically, states are sets of positive integers, for example $\{3, 3, 4\}$ or $\{4, 5, 5\}$. Taking these objects as stand-ins for boxes and their properties as stand-ins for individual box sizes, the state $\{3, 3, 4\}$ corresponds to a plurality of three boxes, two of size 3 and a third of size 4. States are formed by drawing three times from a uniform prior distribution over boxes (i.e., objects); boxes come in three sizes: 3, 4 5.
+ 
+ Next, the utterances. Speakers have the choice between three utterances: one {unambiguously distributive} (e.g., \emph{the boxes each are big}), one {unambiguously collective} (e.g., \emph{the boxes together are big}), and the last {ambiguous} between a distributive and collective interpretation (e.g., \emph{the boxes are big}). In \Next, we give the semantics for these utterances, to be used in our model by the literal listener $L_{0}$.
+ 
+ \ex. \emph{Utterance semantics}:
+ \a. \sem{\texttt{distributive}} = \lam $s$. \texttt{distributive-interpretation}($s$)
+ \b. \sem{\texttt{collective}} = \lam $s$. \texttt{collective-interpretation}($s$)
+ \b. \sem{\texttt{ambiguous}} = \lam $V$\lam $s$. \texttt{if} $V$ = \textsc{collective}, \texttt{then}\\  \textcolor{white}{\sem{\texttt{ambiguous}} = \lam $V$\lam $s$. }\texttt{collective-interpretation}($s$)\\
+ \textcolor{white}{\sem{\texttt{ambiguous}} = \lam $V$\lam $s$. }\texttt{else}, \\
+ \textcolor{white}{\sem{\texttt{ambiguous}} = \lam $V$\lam $s$. }\texttt{distributive-interpretation}($s$)
+ 
+ The \texttt{distributive} utterance receives a distributive interpretation. The \texttt{collective} utterance receives a collective interpretation. The interpretation of the \texttt{ambiguous} utterance depends on the value of the variable $V$. When $V$ is \textsc{collective}, the utterance receives a collective interpretations; otherwise, the utterance receives a distributive interpretation. These interpretations receive the semantics in \Next.
+ 
+ \ex. \emph{Interpretation semantics}:
+ \a. \sem{\texttt{distributive-interpretation}} =
+\begin{flushright}\lam $s$. $\forall$x$\in$$s$[x $>$ \texttt{distributive-threshold}]\end{flushright}
+\b. \sem{\texttt{collective-interpretation}} = 
+\begin{flushright}\lam $s$. (\texttt{sum}($s$) $\times$ \textcolor{red}{\texttt{noise}}) $>$ \texttt{collective-threshold}\end{flushright}
+
+The \texttt{distributive-interpretation} is true of a state $s$ just in case each of its members exceeds some distributive threshold. In our box setting, this semantics captures the fact that the distributive interpretation of a gradable predicate is true of a plurality when each of its members exceeds a contextually-determined cutoff (for, e.g., size). The \texttt{collective-interpretation} is true of a state $s$ just in case the sum of that state --- the state taken together --- exceeds some collective threshold. Here we capture the sum-based aggregation inherent to collective interpretations of gradable predicates. 
+
+The \textcolor{red}{\texttt{noise}} parameter in the \texttt{collective-interpretation} is a scalar multiplier of the set aggregate estimate. This parameter represents possible noise in the determination of, say, collective size. For our purposes, lower noise (i.e., values closer to 1) corresponds to increased contextual predictability of the collective property. Values for \textcolor{red}{\texttt{noise}} are shown in \Next, where, for example, \texttt{low} \textcolor{red}{\texttt{noise}} equals 1 (i.e., no change to the state estimate) 100\% of the time.
+
+\ex. \emph{Noise priors}:\\[5pt]
+\texttt{no} \textcolor{red}{\texttt{noise}}:\\[2pt]
+\includegraphics[width=\linewidth]{images/no-noise.eps}\\[5pt]
+\texttt{low} \textcolor{red}{\texttt{noise}}:\\[2pt]
+\includegraphics[width=\linewidth]{images/low-noise.eps}\\[5pt]
+\texttt{medium} \textcolor{red}{\texttt{noise}}:\\[2pt]
+\includegraphics[width=\linewidth]{images/mid-noise.eps}\\[5pt]
+\texttt{high} \textcolor{red}{\texttt{noise}}:\\[2pt]
+\includegraphics[width=\linewidth]{images/high-noise.eps}
+
+With \texttt{no} noise, our estimates are spot on and collective properties are maximally predictable from context. Increasing noise, contextual predictability decreases: our estimates of collective properties deviate from the true state. Noise (i.e., contextual predictability) is a property of the discourse context, and as such speakers and listeners both have access to its value.
+
+
 
 
 \section{General discussion}
