--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-04-06 10:09:54 -0700 
+%% Created for Greg Scontras at 2015-04-09 15:15:36 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{goodmanstuhlmuller2013,
+	Author = {Noah D. Goodman and Andreas Stuhlm\"{u}ller},
+	Date-Added = {2015-04-09 22:14:56 +0000},
+	Date-Modified = {2015-04-09 22:15:36 +0000},
+	Journal = {Topics in Cognitive Science},
+	Pages = {173-184},
+	Title = {Knowledge and Implicature: Modeling Language Understanding as Social Cognition},
+	Volume = {5},
+	Year = {2013}}
 
 @inproceedings{syrett2015,
 	Author = {Kristen Syrett},
