--- a/writing/Cubert/Cubert manuscript.tex
+++ b/writing/Cubert/Cubert manuscript.tex
@@ -701,6 +701,21 @@ Another outcome of our model's predictions is the increase in the probability of
 
 We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing estimate noise) increases the probability of collective interpretation; and, regardless of the amount of collective noise, removing support for a distributive interpretation (by limiting speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increase the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Once we fit these parameters to the human data collected in Expt.~2, we may test both qualitative and quantitative predictions of the model.
 
+First, we should settle on the human data to which we compare the model outcomes. To evaluate the role of speaker knowledge, we look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). In Fig.~\ref{heavymodel}, we plot average collective endorsement ratings from Expt.~2, together with model predictions fit to these data.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=.8\linewidth]{plots/heavymodel.eps}
+	\vspace{5pt}
+	\caption{Fitted model predictions and human data from Expt.~2 for collective interpretations of \emph{heavy}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise of interpretation (``low'' vs.~``mid'') and the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``partial'').} \label{heavymodel}
+\end{figure}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=.8\linewidth]{plots/bigtallmodel.eps}
+	\vspace{5pt}
+	\caption{Fitted model predictions and human data from Expt.~2 for collective interpretations of \emph{big} and \emph{tall}; variability of context (i.e., ``random'' vs.~``regular'') is modeled by noise of interpretation (``low'' vs.~``mid'').} \label{bigtallmodel}
+\end{figure}
 
 
 \section{General discussion}
@@ -723,7 +738,7 @@ Table \ref{expt1analysis1} presents model coefficients for the full mixed logist
 
 \begin{table}[h!] 
 	\centering \caption{Full logistic regression model from paraphrase analysis of Expt.~1.} \label{expt1analysis1}
-\begin{tabular}{lrrrl}\toprule
+\begin{tabular}{lrrrr}\toprule
 	&	Coef $\beta$	&	SE($\beta$)	&	\multicolumn{1}{c}{ \textbf{z}}	&	\multicolumn{1}{c}{$p$}\\ \midrule
 Intercept	&	-0.43	&	0.49	&	-0.88	&	0.38\\
 Utterance	&	5.50	&	0.94	&	5.87	&	\textbf{$<$0.01}\\
@@ -737,7 +752,7 @@ Table \ref{expt1analysis2} presents model coefficients for the full mixed logist
 
 \begin{table}[h!] 
 	\centering \caption{Full logistic regression model from bare utterance analysis of Expt.~1.} \label{expt1analysis2}
-	\begin{tabular}{lrrrl}\toprule
+	\begin{tabular}{lrrrr}\toprule
 		&	Coef $\beta$	&	SE($\beta$)	&	\multicolumn{1}{c}{ \textbf{z}}	&	\multicolumn{1}{c}{$p$}\\ \midrule
 		Intercept	&	-4.65	&	1.49	&	-3.12	&	\textbf{$<$0.01}\\
 		Pred-heavy	&	3.05	&	1.23	&	2.48	&	\textbf{$<$0.05}\\
